--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "node dist/runner/index.js",
     "dev": "node --loader ts-node/esm src/runner/index.ts",
     "agent": "yarn dev examples/hello-agent/AgentModule.ts '{\"name\":\"Developer\"}'",
-    "llm-agent": "yarn dev examples/llm-agent/AgentModule.ts '{\"query\":\"Tell me a random joke about ai?\"}'",
+    "run-agent": "node --loader ts-node/esm src/runner/runnerCli.ts",
+    "run-hello": "yarn run-agent examples/llm-agent/AgentModule.ts '{\"query\":\"Explain Reinforcement Learning to me\"}'",
     "test": "jest",
     "test:llm": "node --loader ts-node/esm examples/llm-test/test-llm.ts"
   },
@@ -34,14 +35,16 @@
   "author": "Your Name <your.email@example.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.14.1",
-    "typescript": "^5.8.3",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.1",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "callllm": "1.0.2"
+    "callllm": "file:/Users/maximantonov/Work/_lab/callllm"
   }
 }
