--- a/apps/examples/memory-usage/package.json
+++ b/apps/examples/memory-usage/package.json
@@ -8,7 +8,7 @@
     ".": "./dist/AgentModule.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles agent.json dist",
     "dev": "ts-node AgentModule.ts"
   },
   "dependencies": {
