--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "callagent",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "AI Agents Framework with A2A Support",
   "type": "module",
   "main": "dist/index.js",
@@ -18,14 +18,15 @@
     "LICENSE"
   ],
   "scripts": {
+    "postinstall": "node scripts/sync-dotenv.cjs",
     "build": "tsc",
     "start": "node dist/runner/index.js",
     "dev": "node --loader ts-node/esm src/runner/index.ts",
-    "agent": "yarn dev examples/hello-agent/AgentModule.ts '{\"name\":\"Developer\"}'",
-    "run-agent": "node packages/core/dist/runner/runnerCli.js",
-    "run-hello": "yarn run-agent apps/examples/llm-agent/dist/AgentModule.js '{\"prompt\": \"Tell me a joke about AI.\"}'",
+    "run-agent": "yarn turbo run build && node packages/core/dist/runner/runnerCli.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "postinstall": "node scripts/sync-dotenv.cjs"
+    "run:llm": "yarn run-agent apps/examples/llm-agent/dist/AgentModule.js '{\"prompt\": \"Tell me a joke about AI.\"}'",
+    "run:memory": "yarn run-agent apps/examples/memory-usage/dist/AgentModule.js",
+    "clean": "find . -type d -name dist -exec rm -rf {} +"
   },
   "keywords": [
     "ai",
@@ -39,6 +40,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
     "@types/uuid": "^10.0.0",
+    "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "prisma": "^6.7.0",
