--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,6 +5,6 @@
     "moduleResolution": "nodenext",
     "outDir": "dist"
   },
-  "include": [],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 } 
