--- a/packages/memory-sql/package.json
+++ b/packages/memory-sql/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@callagent/memory-sql",
   "version": "0.1.0",
-  "main": "dist/src/MemorySQLAdapter.js",
+  "main": "dist/MemorySQLAdapter.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
@@ -9,8 +9,14 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "test": "jest",
-    "postinstall": "prisma generate"
+    "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js",
+    "postinstall": "prisma generate",
+    "db:migrate": "prisma migrate deploy",
+    "db:generate": "prisma generate",
+    "db:setup-vectors": "tsx scripts/setup-vectors.ts",
+    "db:setup": "yarn db:migrate && yarn db:generate && yarn db:setup-vectors",
+    "db:reset": "prisma migrate reset && yarn db:setup",
+    "db:dev": "prisma migrate dev && yarn db:setup-vectors"
   },
   "publishConfig": {
     "access": "public"
@@ -25,18 +31,20 @@
     "callagent"
   ],
   "dependencies": {
-    "@prisma/client": "^6.7.0",
-    "@callagent/types": "0.1.0"
+    "@callagent/types": "0.1.0",
+    "@callagent/utils": "0.1.0",
+    "@prisma/client": "^6.7.0"
   },
   "devDependencies": {
-    "prisma": "^6.7.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.3.2",
     "jest-mock-extended": "^4.0.0-beta1",
+    "prisma": "^6.7.0",
+    "ts-jest": "^29.3.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "type": "module",
   "exports": {
-    ".": "./dist/src/MemorySQLAdapter.js"
+    ".": "./dist/MemorySQLAdapter.js"
   }
 }
