--- a/packages/memory-sql/tsconfig.json
+++ b/packages/memory-sql/tsconfig.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "outDir": "dist"
+    "outDir": "dist",
+    "isolatedModules": true
   },
-  "include": ["src", "tests"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "tests"]
 } 
