--- a/packages/memory-sql/package.json
+++ b/packages/memory-sql/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@callagent/memory-sql",
   "version": "0.1.0",
-  "main": "dist/MemorySQLAdapter.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
@@ -45,6 +45,6 @@
   },
   "type": "module",
   "exports": {
-    ".": "./dist/MemorySQLAdapter.js"
+    ".": "./dist/index.js"
   }
 }
