AgentDiscoveryLogic and Dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "callagent",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "AI Agents Framework with A2A Support",
   "type": "module",
   "main": "dist/index.js",
@@ -19,15 +19,18 @@
   ],
   "scripts": {
     "postinstall": "node scripts/sync-dotenv.cjs",
-    "build": "tsc",
+    "build": "yarn turbo run build",
     "start": "node packages/core/dist/runner/runnerCli.js",
     "dev": "node --loader ts-node/esm packages/core/src/runner/runnerCli.ts",
-    "run-agent": "yarn turbo run build && node packages/core/dist/runner/runnerCli.js",
+    "run-agent": "yarn build && node packages/core/dist/runner/runnerCli.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "run:llm": "yarn run-agent apps/examples/llm-agent/dist/AgentModule.js '{\"prompt\": \"Tell me a joke about AI.\"}'",
     "run:memory": "yarn run-agent apps/examples/memory-usage/dist/AgentModule.js '{}' --stream --tenant=customer-123",
     "run:hello": "yarn run-agent apps/examples/hello-agent/dist/AgentModule.js '{\"name\": \"World\"}'",
     "run:hello-no-deps": "yarn run-agent apps/examples/hello-agent/dist/AgentModule.js '{\"name\": \"World\"}' --no-resolve-deps",
+    "run:calc": "run-agent apps/examples/calculator-workflow/dist/CoordinatorAgent.js '{\"expression\": \"5 * 2 + 3 - 1\"}'",
+    "run:csv-parser": "yarn run-agent apps/examples/data-processing/csv-parser/dist/AgentModule.js '{\"csvData\": \"name,age,city\\nJohn,25,NYC\\nJane,30,LA\"}'",
+    "run:data-analyzer": "yarn run-agent apps/examples/business-logic/data-analyzer/dist/AgentModule.js '{\"csvData\": \"name,age,salary\\nJohn,25,50000\\nJane,30,60000\\nBob,35,70000\", \"analysisType\": \"statistics\"}'",
     "clean": "find . -type d -name dist -exec rm -rf {} +"
   },
   "keywords": [
@@ -57,7 +60,9 @@
   "workspaces": [
     "packages/*",
     "apps/*",
-    "apps/examples/*"
+    "apps/examples/*",
+    "apps/examples/data-processing/*",
+    "apps/examples/business-logic/*"
   ],
   "private": true,
   "packageManager": "yarn@1.22.22"
