fix cache for streaming

--- a/apps/examples/cached-agent/package.json
+++ b/apps/examples/cached-agent/package.json
@@ -6,13 +6,14 @@
   "main": "dist/AgentModule.js",
   "types": "dist/AgentModule.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles agent.json dist",
     "dev": "tsc --watch"
   },
   "dependencies": {
     "@callagent/core": "workspace:*"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "typescript": "^5.4.5"
   }
 }
