--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "@callagent/core",
-  "version": "0.1.1",
+  "name": "@a2arium/callagent-core",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "cd ../../ && yarn test --testPathPattern=\"packages/core\"",
-    "dev": "ts-node --project tsconfig.json src/runner/runnerCli.ts"
+    "dev": "ts-node --project tsconfig.json src/runner/runnerCli.ts",
+    "npm:publish": "npm publish --access public",
+    "npm:publish:dry-run": "npm publish --access public --dry-run",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
   "publishConfig": {
     "access": "public"
@@ -23,9 +35,9 @@
     "callagent"
   ],
   "dependencies": {
-    "@callagent/memory-sql": "0.1.0",
-    "@callagent/types": "0.1.0",
-    "@callagent/utils": "0.1.0",
+    "@a2arium/callagent-memory-sql": "0.2.0",
+    "@a2arium/callagent-types": "0.2.0",
+    "@a2arium/callagent-utils": "0.2.0",
     "@prisma/client": "^6.7.0",
     "dotenv": "^16.4.5",
     "uuid": "^11.1.0"
