--- a/apps/examples/business-logic/data-analyzer/package.json
+++ b/apps/examples/business-logic/data-analyzer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@callagent/data-analyzer-agent",
+  "name": "@a2arium/data-analyzer-agent",
   "version": "1.0.0",
   "description": "Data analysis agent in business-logic category",
   "type": "module",
@@ -9,7 +9,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@callagent/core": "workspace:*"
+    "@a2arium/callagent-core": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
