--- a/apps/examples/complete-memory-phase1/package.json
+++ b/apps/examples/complete-memory-phase1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@callagent/complete-memory-phase1",
+  "name": "@a2arium/complete-memory-phase1",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -14,9 +14,9 @@
     "test": "yarn demo"
   },
   "dependencies": {
-    "@callagent/core": "0.1.0",
-    "@callagent/types": "0.1.0",
-    "@callagent/utils": "0.1.0"
+    "@a2arium/callagent-core": "workspace:*",
+    "@a2arium/callagent-types": "workspace:*",
+    "@a2arium/callagent-utils": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
