--- a/apps/examples/working-memory-demo/package.json
+++ b/apps/examples/working-memory-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@callagent/working-memory-demo",
+  "name": "@a2arium/working-memory-demo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,7 +12,7 @@
     "dev": "ts-node AgentModule.ts"
   },
   "dependencies": {
-    "@callagent/core": "0.1.0",
-    "@callagent/utils": "0.1.0"
+    "@a2arium/callagent-core": "workspace:*",
+    "@a2arium/callagent-utils": "workspace:*"
   }
 }
