--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,9 +11,9 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "@callagent/core": ["packages/core/src"],
-      "@callagent/types": ["packages/types/src"],
-      "@callagent/memory-sql": ["packages/memory-sql/src"]
+      "@a2arium/core": ["packages/core/src"],
+      "@a2arium/types": ["packages/types/src"],
+      "@a2arium/memory-sql": ["packages/memory-sql/src"]
     }
   }
 } 
