--- a/packages/memory-sql/package.json
+++ b/packages/memory-sql/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "callagent-memory-sql": "./scripts/setup-database.js"
+    "callagent-memory-sql": "./scripts/setup-database.cjs"
   },
   "files": [
     "dist",
