--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "callagent",
-  "version": "0.2.y",
+  "version": "0.2.10",
   "description": "AI Agents Framework with A2A Support",
   "type": "module",
   "main": "dist/index.js",
